--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,8 +17,8 @@ jobs:
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag cityscapes:latest
     - name: login
-      run: docker login -u your_name -p ${{secrets.DOCKER_HUB_TOKEN}}
+      run: docker login -u ahmedayman4a -p ${{secrets.DOCKER_HUB_TOKEN}}
     - name: Tag the Docker image
-      run: docker tag cityscapes:latest username/repo_name:latest
+      run: docker tag cityscapes:latest ahmedayman4a/cityscapes:latest
     - name: push the Docker image
-      run: docker push username/repo_name:latest
+      run: docker push ahmedayman4a/cityscapes:latest
